# Nexus-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  Stack.env  Stack.env.example  docker-compose.yml  nexus_skill_vault.db  pyproject.toml  requirements.txt  start_vllm.bat
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  codeql.yml
.history/: README_20260507142739.md  README_20260507153011.md  README_20260507153045.md  README_20260507153100.md  README_20260507153726.md  README_20260507155009.md  README_20260507155538.md  README_20260507160140.md  pyproject_20260507162233.toml  requirements_20260507161810.txt
.history/docs/: Advanced-System-Architecture-and-Usage-Guide.th_20260507155538.md  Advanced-System-Architecture-and-Usage-Guide.th_20260507160226.md  Advanced-System-Architecture-and-Usage-Guide_20260507155051.md  Advanced-System-Architecture-and-Usage-Guide_20260507155146.md  Advanced-System-Architecture-and-Usage-Guide_20260507155538.md  Advanced-System-Architecture-and-Usage-Guide_20260507160229.md
.history/nexus_agent/: __init___20260507152723.py  (+5 more)
alembic/: env.py
docker/: entrypoint.sh
docs/: Automatic Skill Learning & Repository Implementation.md  Cyber-Thai-Command-Center-Plan V2.md  Cyber-Thai-Command-Center-Plan.md  Evolving Nexus-Agent into a Task-Oriented Multi-Agent System.md  Executive-One-Page-Architecture-Value-Rollout.th.md  Nexus-Agent Automatic Skill Learning Implementation.md  Nexus-Agent Migration Walkthrough.md  Nexus-Agent System Implementation Walkthrough.md  Nexus-Agent — Project Analysis Report.md  Nexus-Agent-Documentation.html  Nexus-Agent_ Multi-AI Agent System Documentation.docx  Nexus-Agent_ Multi-AI Agent System Documentation.md  runbook.md  secrets.md  แผนการพัฒนาระบบ Multi-AI Agent (Nexus-Agent System) แบบละเอียด.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  (+6 more)
nexus_agent/: __init__.py  entrypoint.py
nexus_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agents.py  test_command_center.py  test_diff_utils.py  test_knowledge_graph_engine.py  test_models.py  test_new_features.py  test_orchestrator.py  test_production_hardening.py
(+133 files in other folders)
