[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "ระบบ Multi-AI Agent อัจฉริยะแบบทำงานต่อเนื่องและแดชบอร์ดการตรวจสอบสำหรับการบริหารจัดการโครงการพัฒนาระบบครบวงจร"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dateutil>=2.8",
    "openai>=1.0.0",
    "langgraph>=0.0.27",
    "langchain-core>=0.1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gpu = [
    "vllm>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_agent*"]
