[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "ระบบ Multi-AI Agent อัจฉริยะแบบทำงานต่อเนื่องและแดชบอร์ดการตรวจสอบสำหรับการบริหารจัดการโครงการพัฒนาระบบครบวงจร"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dateutil>=2.9.0.post0",
    "openai>=1.0.0",
    "langgraph>=1.2.4",
    "langchain-core>=0.1.30",
    "langchain-openai>=0.1.0",
    "ddgs>=9.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.1.0",
]
gpu = [
    "vllm>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_agent*"]
